vlib/v/parser/tests/anon_sum_type_receiver_err.vv
fn (x int | string) baz() {
	println('baz')
}
